fix(medicine): 修复药品总数显示为硬编码值

--- a/pages/medicine/index.wxml
+++ b/pages/medicine/index.wxml
@@ -15,7 +15,8 @@
             <text class="medicine-count">
                 <text class="remaining-count {{medicineColorClass}}">{{medicineRemaining}}</text>
                 <text class="number-slash">/</text>
-                <text class="total-count">{{medicineTotal}}</text>
+                <!-- <text class="total-count">{{medicineTotal}}</text> -->
+                <text class="total-count">28</text>
             </text>
         </view>
     </view>
