--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 32rpx;
+    padding: 32rpx 0;
     border-bottom: 1rpx solid var(--border-color);
 }
 
